# Tesseract-Uchen-Training

./: .gitignore  README.md  output.txt  pyproject.toml
tesstrain/: Makefile
tesstrain/Scripts/: lmdbdownload.py  preprocess.py
tesstrain/model/: tib.traineddata
